# obelisk_inference

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Paper.ipynb  recipe.json
results/infer_bench/: essai_Medium.csv  post_Low.csv  pre_High(10).csv  pre_Low.csv  pre_Medium.csv
results/infer_bench_cost_only/: essai_Low.csv  post_Low.csv  pre_Low.csv  pre_Medium.csv
results/microactor_bench/: post_Low.csv  pre_Low.csv  pre_Medium.csv
scripts/: entrypoint.sh  requirements.txt  setup.py  setup.sh
src/: bench_depl.toml  bench_fn.rs  deployment.toml  infer_test.rs  lib.rs  main.py  main.rs  prompt.json
