[package]
name = "inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde_json = "*"
serde = {version="*", features = ["derive"]}
base64 = "0.21"
image = "*"
which = "*"
obelisk = {path="./obelisk"}
obelisk_deployment = {package="deployment", path="./obelisk/deployment"}

[dependencies.pyo3]
version = "*"
features = ["auto-initialize"]


[dev-dependencies]
csv = "*"
rand = "*"
